# weather_data_fetcher

./: .env  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
models/: rain_classifier.joblib  rain_classifier_hourly.joblib  rain_iso_calibrator.joblib  rain_model_meta.json  rain_xgb_12h.joblib  rain_xgb_cal_meta.json  rain_xgb_meta.json  rain_xgb_tuned.joblib  rain_xgb_tuned_meta.json  temp_regressor.joblib  temp_regressor_multi.joblib  xgb_tuned.json
scripts/: analyze_weather.py  coef_rain.py  cv_benchmark.py  eval_operating_points.py  explain_shap.py  explain_shap_interaction.py  export_daily.py  export_hourly.py  feature_importance_rain.py  fetch_weather.sh  intro_ml.py  make_cover.py  plot_pr_roc.py  plot_weather.py  predict_rain.py  process_weather.py  rain_cli.py  time_series_cv_demo.py  train_classify_rain.py  train_classify_rain_hourly.py  train_rain_dual_thresholds.py  train_reg_lag1.py  train_reg_lag1_ma3.py  train_regression.py  train_regression_features.py  train_xgb_12h.py  train_xgb_12h_calibrated.py  train_xgb_tuned_final.py  xgb_tune_timeseries.py
weather_cli/: cli.py
weather_data_fetcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
